# Aldaron's Format Interface / Aldaron's Document Format (docf)                #
# Copyright (c) 2017 Plop Grizzly, Jeron Lau <jeron.lau@plopgrizzly.com>       #
# Licensed under the MIT LICENSE                                               #
#                             _        _                                       #
#                            /@\——————/@\                                      #
# .———  .                   |   o    o   |     .————      .            .       #
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   . #
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   | #
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /  #
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |   #
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |   #
#                 |        \              /                              __/   #
#                           ¯————————————¯                                     #
# Cargo.toml                                                                   #

################################################################################

[package]
name = "afi_docf"
version = "0.0.1"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"]

################################################################################

license = "MIT"
documentation = "https://docs.rs/afi_docf"
homepage = "http://plopgrizzly.com/afi_docf"
repository = "https://github.com/plopgrizzly/afi_docf"

################################################################################

readme = "README.md"
description = """
    Aldaron's Format Interface / docf is a library developed by Plop Grizzly for
    reading and writing docf (Aldaron's Document Format) files.
"""
keywords = ["docf", "document", "afi", "text", "format"]
categories = ["encoding", "no-std", "parsing", "text-processing"]

################################################################################

exclude = [
	"examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore",
	"_config.yml", "ISSUE_TEMPLATE.md", "icon.png"
]

################################################################################

[dependencies]

################################################################################
